2015-03-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/search.c (regexp_search): Permit zero-length matches, so 
	that "^" doesn't search through entire file.  Pass REG_NOTBOL 
	flag to regexec.

2015-03-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info-utils.c (parse_top_node_line): Check for 
	INFO_ALTPREV_LABEL, as was done before.

2015-03-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/man.c (get_manpage_node): Use return value of asprintf 
	instead of calling strlen.
	* info/dir.c (dir_entry_of_infodir): Check for null filename.
	* info/info-utils.c (scan_reference_target): Allow skipping tabs
	before filename component of menu entry, and not after.

2015-03-06  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/man.c (get_manpage_node): Avoid using fixed-size buffer 
	to construct string.  Report from James Chang.

2015-03-04  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info-utils.c (parse_top_node_line): Check for labels 
	case-insensitively, as was done before.
	(scan_reference_target): Allow a tab to terminate a node name in 
	a menu entry.
	* info/infopath.c (infopath_next): Handle case when the search 
	path is empty.
	* info/session.c (info_select_reference): Default to "Top" in 
	error message if node couldn't be loaded.
	* into/t/empty-infopath.sh: New test.

2015-03-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/Init-test.inc: Trap SIGINT.
	(cleanup): Kill the subshell that launched ginfo and delete FIFO 
	file for communicating that subshell was finished.
	* info/t/Timeout-test.inc: Clear SUBSHELL shell variable.

2015-03-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/infodoc.c (info_get_info_help_node): If in a help
	window, close it before loading the tutorial.

2015-03-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info-stnd.texi (infokey format): Example .infokey changed 
	to include "ESC u" for clearing search highlight.  Line setting 
	scroll-step to its default value removed.  Suggest keys Up and 